kube/deployement.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conscoord-client
  namespace: kgb-conscoord
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conscoord-client
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: conscoord-client
    spec:
      containers:
        - name: conscoord-client
          image: garioncox/conscoord-client:${IMAGE_TAG}
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
