kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: conscoord-client-service
  namespace: kgb-conscoord
spec:
  selector:
    app: conscoord-client
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
