kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conscoord-client-ingress
  namespace: kgb-conscoord
spec:
  rules:
  - host: conscoord.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: conscoord-client-service
            port:
              number: 80
